# wildlife-manuscript-builder

./: .gitignore  SKILL.md  pyproject.toml  test-prompts.json
agents/: openai.yaml
assets/: ai-use-statement-template.md  manuscript-template.md  reviewer-risk-checklist.md
references/: acoustic-validation-enhancements.md  answerable-unanswered-question.md  argument-terminology-contract.md  author-decision-points.md  author-knowledge-integration.md  branch-exploration.md  citation-coverage-check.md  claim-boundaries.md  claim-ledger.md  data-availability-source-data.md  data-contract.md  data-type-routing.md  decision-loop.md  deep-literature-standard.md  deliverable-pathways.md  delivery-readiness-score.md  discussion-conclusion-quality-gate.md  figure-claim-trace.md  figure-table-assembly.md  introduction-quality-gate.md  journal-package-checklist.md  journal-target-contract.md  knowledge-base-spec.md  literature-search-fallback.md  manuscript-potential-rubric.md  multi-agent-workflow.md  multi-perspective-debate.md  pre-submission-review-gates.md  question-method-map.md  r-acoustic-hotspot-mapping.md  reference-verification.md  result-card-template.md  reviewer-objection-simulator.md  revision-loop.md  rewriting-existing-manuscript.md  run-lessons.md  section-length-quality-gate.md  sentinel-watchdog.md  statistical-delivery-gate.md  submission-metadata-contract.md
scripts/: audit_data_package.py  build_result_cards.py  check_acoustic_method_completeness.py  check_citation_coverage.py  check_claim_ledger.py  check_conclusion_strength.py  check_delivery_readiness.py  (+8 more)
(+94 files in other folders)
